<?xml version="1.0" encoding="utf-8"?>
<carbon.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="?attr/colorPrimary"
    android:layout_marginHorizontal="8dp"
    app:carbon_cornerRadius="16dp"
    app:carbon_elevation="6dp"
    app:carbon_elevationShadowColor="?attr/colorControlHighlight">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_photo"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:scaleType="centerCrop"
            android:src="@drawable/idle_photo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_rover_name"
            style="@style/Widget.MaterialComponents.TextView.RoverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_photo"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:text="@string/example_rover_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_camera_name"
            style="@style/Widget.MaterialComponents.TextView.CameraName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_rover_name"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:text="@string/example_camera_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_show_image"
            style="@style/Widget.MaterialComponents.TextView.ShowImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_camera_name"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/show_image" />
    </RelativeLayout>
</carbon.widget.LinearLayout>