<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_marker_name"
        style="@style/Widget.MaterialComponents.TextView.MarkerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/example_marker_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_lat"
        style="@style/Widget.MaterialComponents.TextView.MarkerInto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lat"
        app:layout_constraintStart_toStartOf="@+id/text_marker_name"
        app:layout_constraintTop_toBottomOf="@+id/text_marker_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_lon"
        style="@style/Widget.MaterialComponents.TextView.MarkerInto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/lon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_lat"
        app:layout_constraintTop_toBottomOf="@+id/text_lat" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_lat_value"
        style="@style/Widget.MaterialComponents.TextView.MarkerInto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/example_latLon"
        app:layout_constraintBottom_toBottomOf="@+id/text_lat"
        app:layout_constraintStart_toEndOf="@+id/text_lat"
        app:layout_constraintTop_toTopOf="@+id/text_lat" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/separator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_lon_value"
        style="@style/Widget.MaterialComponents.TextView.MarkerInto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="@string/example_latLon"
        app:layout_constraintBottom_toBottomOf="@+id/text_lon"
        app:layout_constraintStart_toEndOf="@+id/text_lon"
        app:layout_constraintTop_toTopOf="@+id/text_lon" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_delete_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:src="@drawable/delete_marker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>