<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_background"
    tools:context=".ui.details_screen.DetailsScreenFragment">

    <com.example.space.ui.PhotoCustomView
        android:id="@+id/image_detail_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_onboarding_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/gray_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/image_back_to_main"
        app:layout_constraintStart_toEndOf="@id/image_back_to_main" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/image_arrow_left"
        app:layout_constraintEnd_toStartOf="@id/image_share" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_gesture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gesture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hand"
        app:layout_constraintBottom_toBottomOf="@+id/image_gesture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_back_instruction"
        style="@style/Widget.MaterialComponents.TextView.OnboardingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:text="@string/onboarding_back"
        app:layout_constraintEnd_toEndOf="@+id/image_arrow_left"
        app:layout_constraintStart_toStartOf="@+id/image_back_to_main"
        app:layout_constraintTop_toBottomOf="@+id/image_arrow_left" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_share_instruction"
        style="@style/Widget.MaterialComponents.TextView.OnboardingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_share"
        app:layout_constraintEnd_toEndOf="@+id/image_share"
        app:layout_constraintStart_toStartOf="@+id/image_arrow_right"
        app:layout_constraintTop_toBottomOf="@+id/image_arrow_right" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_gesture_instruction"
        style="@style/Widget.MaterialComponents.TextView.OnboardingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_usage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_gesture" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/onboarding_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="image_arrow_left, image_arrow_right, image_onboarding_background, image_hand, image_gesture, text_back_instruction, text_share_instruction, text_gesture_instruction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/share_button"
        app:layout_constraintBottom_toBottomOf="@+id/image_arrow_right"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>